--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* 
- * MOBY.LESS VERSION 1.7.2
+ * MOBY.LESS VERSION 1.7.3
  */
 .moby-ul-overflow {
   overflow: hidden !important;
@@ -228,7 +228,7 @@
   font-size: 16px;
   font-weight: 400;
   display: block;
-  padding: 10px 60px 10px 0;
+  padding: 10px 60px 10px 20px;
 }
 #moby ul li a .moby-expand {
   position: absolute;
@@ -273,7 +273,6 @@
   height: calc(100vh - 78px);
   top: 78px;
   position: fixed;
-  right: 0;
   width: 280px;
   list-style: none;
   overflow-y: auto;
@@ -417,7 +416,7 @@
 #moby.moby-has-multi-level #moby-top-wrap #moby-prev > * {
   display: block;
 }
-#moby.moby-has-multi-level #moby-clone ul {
+#moby.moby-has-multi-level #moby-clone nav {
   padding: 0 20px 20px 20px;
 }
 * {
